@@ -1,4 +1,4 @@
-/* $Id: newmenu.c,v 1.19.2.5 2003-05-31 04:28:34 btb Exp $ */
+/* $Id: newmenu.c,v 1.19.2.6 2003-06-03 11:01:34 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -2897,7 +2897,7 @@ RePaintNewmenuFile:
  				if (x==0)	{
 					char * p;
 					int ret;
-					char name[_MAX_PATH];
+					char name[_MAX_PATH] = "";
 
 					p = &filenames[(citem*14)+strlen(&filenames[citem*14])];
 					if (player_mode)
@@ -2919,7 +2919,7 @@ RePaintNewmenuFile:
 					}
 					#endif
 				
-					ret = unlink( name );
+					ret = !PHYSFS_delete(name);
 					if (player_mode)
 						*p = 0;
 
